--- a/mail_example.ini
+++ b/mail_example.ini
@@ -4,8 +4,9 @@
 [DEFAULT]
 sender = gmail
 receiver = protonmail
-subject = RPi3B+ ifconfig
+subject = RPi4 ifconfig
 commands = ifconfig
+           iwconfig
            curl https://ipecho.net/plain
            netstat -r
            traceroute 8.8.8.8
