--- a/mail.ini
+++ b/mail.ini
@@ -3,14 +3,15 @@
 [DEFAULT]
 sender = gmail
 receiver = protonmail
-subject = RPi3B+ ifconfig
+subject = RPi4 ifconfig
 commands = ifconfig
+           iwconfig
            curl https://ipecho.net/plain
            netstat -r
            traceroute 8.8.8.8
 
 [gmail]
-name = Honza RPi3B+ <rpi3.tomek@gmail.com>
+name = Honza RPi4 <rpi3.tomek@gmail.com>
 username = rpi3.tomek@gmail.com
 password = rpi&fqp30n06l
 port = 465
