--- a/mail_example.ini
+++ b/mail_example.ini
@@ -1,25 +1,26 @@
 # configuration file to be used by configparser module in python3
 # rename as mail_v1.0.ini and supply correct e-mails and sender password
 
-[DEFAULT]
+[GLOBAL]
 sender = gmail
 receiver = protonmail
 subject = RPi4 ifconfig
+rsa_private = ./email_ifconfig_rsa
+rsa_public = ./email_ifconfig_rsa.pub
 commands = ifconfig
-           iwconfig
-           curl https://ipecho.net/plain
-           netstat -r
-           traceroute 8.8.8.8
+	iwconfig
+	curl https://ipecho.net/plain
+	netstat -r
+	traceroute 8.8.8.8
 
 [gmail]
 name = Name <email@gmail.com>
 username = email@gmail.com
-password = #############
+password = password.bin
 port = 465
 server = smtp.gmail.com
 protocol = SSL
 
 [protonmail]
 name = Name <email@protonmail.com>
-username = email@protonmail.com
-password = ##############
+
